# csockets

./: .gitignore  README.md
demojs/: README.md  test.js
tcpEchoServer/: README.md
tcpEchoServer/src/: main.c
tcpPrintServer_poll/: Makefile  README.md
tcpPrintServer_poll/src/: clienthandle.c  log.h  main.c  main.c.backup  socketloop.c  socketloop.h
udpchat/: .editorconfig  Makefile  README.md  addr2str.c  addr2str.h  compile_commands.txt  main.c  meson.build  users.c  users.h
udpchat/src/: config.h  main.c  meson.build  msg_formatter.c  msg_formatter.h  users.c  users.h
udpchat/src/util/: logging.h  net.c  net.h  print.h
udpecho/: Makefile  main.c
udpmsg/: .gitignore  Makefile  main.c  main.old.c
